Store key in binary